--- a/amp-dev/_includes/views/partials/example-sidebar.njk
+++ b/amp-dev/_includes/views/partials/example-sidebar.njk
@@ -10,13 +10,13 @@
   <nav toolbar="(min-width: 768px)"
     toolbar-target="ap--sidebar-content">
     <ul>
-      {% include '/views/partials/format-toggle.njk' %}
+      {% include 'views/partials/format-toggle.njk' %}
       <div>
         <div class="ap-o-sidebar">
           <div class="nav">
             {% set categories = g.categories('/amp-dev/documentation/examples/documentation', locale=doc.locale) %}
             {% for category, examples in categories %}
-            [% if format in {{ examples|map(attribute='formats')|sum(start=[])|unique|list|tojson }} %]
+            [% if format in {{ examples|map(attribute='formats')|sum(start=[])|unique|list|dump }} %]
             <ul class="nav-list level-1">
               <li class="nav-item level-1 {% if doc.category == category %}active{% endif %}">
                 <span class="nav-link">
@@ -32,7 +32,7 @@
                 <ul class="nav-list level-2">
                   {% for example in examples %}
                   {% if not example.draft or doc.pod.env.dev %}
-                  [% if format in {{ example.formats|tojson }} %]
+                  [% if format in {{ example.formats|dump }} %]
                   {% set active = true if example == doc %}
                   <li class="nav-item level-2 {% if active %}active{% endif %}" {% if active %}autoscroll{% endif %}>
                     <a class="nav-link" href="{{ example.url.path }}">{{ example.title }}</a>
