--- a/amp-dev/_layouts/views/detail/faq-detail.njk
+++ b/amp-dev/_layouts/views/detail/faq-detail.njk
@@ -9,9 +9,9 @@
 {% block main %}
 <main class="ap--main ap-t-faq-detail">
   <div class="ap--container">
-    {% include '/views/partials/breadcrumbs.njk' %}
+    {% include 'views/partials/breadcrumbs.njk' %}
     <section class="ap--content">
-      {{ doc.html|render|safe }}
+      {{ content|safe }}
     </section>
   </div>
 </main>
