--- a/amp-dev/_layouts/views/detail/template-detail.njk
+++ b/amp-dev/_layouts/views/detail/template-detail.njk
@@ -126,7 +126,7 @@
       <div class="ap-o-teaser-grid">
         <div class="ap-o-teaser-grid-list">
           {% for teaser_doc in collection %}
-            {% include '/views/partials/teaser.njk' %}
+            {% include 'views/partials/teaser.njk' %}
           {% endfor %}
         </div>
       </div>
