--- a/amp-dev/_includes/views/partials/breadcrumbs.njk
+++ b/amp-dev/_includes/views/partials/breadcrumbs.njk
@@ -4,12 +4,12 @@ and the current page title #}
 {% do doc.icons.useIcon('icons/angle-down-solid.svg') %}
 
 {% if not doc.breadcrumbs == False %}
-{% if doc.pod_path.startswith('/amp-dev/documentation/guides-and-tutorials') %}
+{% if doc.pod_path.startsWith('/amp-dev/documentation/guides-and-tutorials') %}
 <nav class="ap-m-breadcrumbs">
   {% set get_started = g.doc('/amp-dev/documentation/index.html', locale=doc.locale) %}
   <a class="ap-m-breadcrumbs-crumb" href="{{ get_started.url.path }}">{{ _('Documentation') }}</a>
 
-  {% if not doc.pod_path.startswith('/amp-dev/documentation/guides-and-tutorials/index.html') %}
+  {% if not doc.pod_path.startsWith('/amp-dev/documentation/guides-and-tutorials/index.html') %}
     {% set guides_and_tutorials = g.doc('/amp-dev/documentation/guides-and-tutorials/index.html', locale=doc.locale) %}
     <span class="ap-m-breadcrumbs-divider">
       <svg class="ap-a-ico ap-m-breadcrumbs-angle"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#angle-down-solid"></use></svg>
@@ -33,7 +33,7 @@ and the current page title #}
   {% endif %}
 </nav>
 
-{% elif doc.pod_path.startswith('/amp-dev/documentation/examples') %}
+{% elif doc.pod_path.startsWith('/amp-dev/documentation/examples') %}
 <nav class="ap-m-breadcrumbs">
   {% set get_started = g.doc('/amp-dev/documentation/index.html', locale=doc.locale) %}
   <a class="ap-m-breadcrumbs-crumb" href="{{ get_started.url.path }}">{{ _('Documentation') }}</a>
@@ -46,7 +46,7 @@ and the current page title #}
   <a class="ap-m-breadcrumbs-crumb" href="{{ examples.url.path }}">{{ _(examples.titles('navigation')) }}</a>
 </nav>
 
-{% elif doc.pod_path.startswith('/amp-dev/documentation/components') %}
+{% elif doc.pod_path.startsWith('/amp-dev/documentation/components') %}
 <nav class="ap-m-breadcrumbs">
   {% set get_started = g.doc('/amp-dev/documentation/index.html', locale=doc.locale) %}
   <a class="ap-m-breadcrumbs-crumb" href="{{ get_started.url.path }}">{{ _('Documentation') }}</a>
@@ -59,7 +59,7 @@ and the current page title #}
   <a class="ap-m-breadcrumbs-crumb" href="{{ components.url.path }}">{{ _(components.titles('navigation')) }}</a>
 </nav>
 
-{% elif doc.pod_path.startswith('/amp-dev/documentation/courses') %}
+{% elif doc.pod_path.startsWith('/amp-dev/documentation/courses') %}
 <nav class="ap-m-breadcrumbs">
   {% set get_started = g.doc('/amp-dev/documentation/index.html', locale=doc.locale) %}
   <a class="ap-m-breadcrumbs-crumb" href="{{ get_started.url.path }}">{{ _('Documentation') }}</a>
@@ -86,7 +86,7 @@ and the current page title #}
   {% endif %}
 </nav>
 
-{% elif doc.pod_path.startswith('/amp-dev/documentation/index.html') %}
+{% elif doc.pod_path.startsWith('/amp-dev/documentation/index.html') %}
 <nav class="ap-m-breadcrumbs">
   {% set get_started = g.doc('/amp-dev/documentation/index.html', locale=doc.locale) %}
   <a class="ap-m-breadcrumbs-crumb" href="{{ get_started.url.path }}">{{ _('Documentation') }}</a>
@@ -98,7 +98,7 @@ and the current page title #}
   <div class="ap-m-breadcrumbs-crumb">{{ _(get_started.titles('navigation')) }}</div>
 </nav>
 
-{% elif doc.pod_path.startswith('/amp-dev/support') %}
+{% elif doc.pod_path.startsWith('/amp-dev/support') %}
 <nav class="ap-m-breadcrumbs">
   {% set support = g.doc('/amp-dev/support/index.md', locale=doc.locale) %}
   <a class="ap-m-breadcrumbs-crumb" href="{{ support.url.path }}">{{ _('Support') }}</a>
