--- a/amp-dev/_includes/views/partials/component-intro.njk
+++ b/amp-dev/_includes/views/partials/component-intro.njk
@@ -40,12 +40,12 @@
   {% set examples = g.json('/shared/data/componentSamples.json') %}
   {# Check if there are examples for the current component #}
   {% if examples[doc.title] %}
-  [% if format in {{ examples[doc.title]|map(attribute='formats')|sum(start=[])|unique|list|tojson }} %]
+  [% if format in {{ examples[doc.title]|map(attribute='formats')|sum(start=[])|unique|list|dump }} %]
   <div class="ap-o-component-intro-references-container">
     <div id="references" class="ap-o-component-intro-box ap-o-component-intro-box-reference">
       <h4>Examples</h4>
       <div class="ap-o-component-intro-box-examples">
-        [% set examples = {{ examples[doc.title]|tojson }} %]
+        [% set examples = {{ examples[doc.title]|dump }} %]
         [% set examplesCount = 0 %]
 
         [% for example in examples %]
