--- a/amp-dev/_includes/views/partials/component-sidebar.njk
+++ b/amp-dev/_includes/views/partials/component-sidebar.njk
@@ -9,7 +9,7 @@
   <nav toolbar="(min-width: 768px)"
     toolbar-target="ap--sidebar-content">
     <ul>
-      {% include '/views/partials/format-toggle.njk' %}
+      {% include 'views/partials/format-toggle.njk' %}
       <div class="ap-o-sidebar-section">
         <div class="ap-o-component-sidebar">
           <div class="nav">
@@ -33,7 +33,7 @@
                   {% set formats = component.formats or [] %}
                   {% set activeDocument = true if component.url == doc.url %}
                   {# the latest document might not support a format, hence we have to check if any version supports the format #}
-                  [% if format in {{ component.formats|list|tojson }} %]
+                  [% if format in {{ component.formats|list|dump }} %]
                   <li {% if activeDocument %}autoscroll {% endif %} class="nav-item {% if activeDocument %}active {% endif %} level-2">
                     <a class="nav-link" href="{{ component.url.path }}">{{ component.title }}</a>
                   </li>
