--- a/amp-dev/_includes/views/partials/header.njk
+++ b/amp-dev/_includes/views/partials/header.njk
@@ -5,14 +5,14 @@
 
 {# Tests if one of the top level navigation items needs to be active #}
 {% macro active_class(search_path) -%}
-{% if doc.pod_path.startswith(search_path) %}ap-m-nav-link-active{% endif %}
+{% if doc.pod_path.startsWith(search_path) %}ap-m-nav-link-active{% endif %}
 {%- endmacro %}
 
 {# Simply set to False to disable banner #}
 {% set show_banner = False %}
 {% if show_banner %}
   {% set banner %}
-  {% include '/views/partials/banner.njk' %}
+  {% include 'views/partials/banner.njk' %}
   {% endset %}
 {% endif %}
 
@@ -31,12 +31,12 @@
     <nav class="ap-o-header-main">
       {# Top level sections, defined by their top collection and landing page #}
       {% set sections = [
-        (g.collection('/amp-dev/about/'), None),
-        (g.collection('/amp-dev/documentation/'), None),
-        (g.collection('/amp-dev/community/'), None),
-        (g.collection('/amp-dev/events/'), None),
-        ('external', (_('Blog'), 'https://blog.amp.dev')),
-        (g.collection('/amp-dev/support/'), None)
+        [g.collection('/amp-dev/about/'), None],
+        [g.collection('/amp-dev/documentation/'), None],
+        [g.collection('/amp-dev/community/'), None],
+        [g.collection('/amp-dev/events/'), None],
+        ['external', (_('Blog'), 'https://blog.amp.dev')],
+        [g.collection('/amp-dev/support/'), None]
       ] %}
 
       {% for section, homepage in sections %}
@@ -100,7 +100,7 @@
     {% do doc.styles.addCssFile('/css/components/molecules/language-selector.css') %}
     <div class="ap-m-language-selector">
       <span class="ap-m-language-selector-label" aria-label="{{ _('Select a language') }}" tabindex="-1">
-        <span class="ap-m-nav-link">{{ doc.locale.language|upper }}</span>
+        <span class="ap-m-nav-link">{{ doc.locale|upper }}</span>
         {% do doc.icons.useIcon('/icons/angle-down-solid.svg') %}
         <div class="ap-a-ico ap-m-language-selector-icon">
           <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#angle-down-solid"></use></svg>
