--- a/amp-dev/_includes/views/partials/structured-data.njk
+++ b/amp-dev/_includes/views/partials/structured-data.njk
@@ -10,7 +10,7 @@
 {% if title and '[=' in title %}
 {% set title = title|safe %}
 {% endif %}
-{% if title.startswith('amp-') and not '_' in title and not ' ' in title %}
+{% if title.startsWith('amp-') and not '_' in title and not ' ' in title %}
 {% set title = '<' + title + '>' %}
 {% endif %}
 
@@ -24,39 +24,39 @@
 {% elif '/components/' in doc.pod_path %}
 {% set sharing_images = {
   'square': '/static/img/sharing/docs-component-1x1.png',
-  'wide': '/static/img/sharing/docs-component-600x314.png',
+  'wide': '/static/img/sharing/docs-component-600x314.png'
 } %}
 {% elif '/examples/' in doc.pod_path %}
 {% set sharing_images = {
   'square': '/static/img/sharing/docs-example-1x1.png',
-  'wide': '/static/img/sharing/docs-example-600x314.png',
+  'wide': '/static/img/sharing/docs-example-600x314.png'
 } %}
 {% elif '/guides-and-tutorials/' in doc.pod_path %}
 {% set sharing_images = {
   'square': '/static/img/sharing/docs-guide-1x1.png',
-  'wide': '/static/img/sharing/docs-guide-600x314.png',
+  'wide': '/static/img/sharing/docs-guide-600x314.png'
 } %}
 {% elif '/courses/' in doc.pod_path %}
 {% set sharing_images = {
   'square': '/static/img/sharing/docs-courses-1x1.png',
-  'wide': '/static/img/sharing/docs-courses-600x314.png',
+  'wide': '/static/img/sharing/docs-courses-600x314.png'
 } %}
 {% else %}
 {% set sharing_images = {
   'square': '/static/img/sharing/default-1x1.png',
-  'wide': '/static/img/sharing/default-600x314.png',
+  'wide': '/static/img/sharing/default-600x314.png'
 } %}
 {% endif %}
 
 {# Prefix title with section #}
 {% set title_prefix = '' %}
-{% if doc.pod_path.startswith('/amp-dev/documentation/examples/documentation/') %}
+{% if doc.pod_path.startsWith('/amp-dev/documentation/examples/documentation/') %}
 {% set title_prefix = _('Example: ') %}
-{% elif doc.pod_path.startswith('/amp-dev/documentation/examples/previews/') %}
+{% elif doc.pod_path.startsWith('/amp-dev/documentation/examples/previews/') %}
 {% set title_prefix = _('Demo: ') %}
-{% elif doc.pod_path.startswith('/amp-dev/documentation/components/reference/') %}
+{% elif doc.pod_path.startsWith('/amp-dev/documentation/components/reference/') %}
 {% set title_prefix = _('Documentation: ') %}
-{% elif doc.pod_path.startswith('/amp-dev/about/success-stories/') and not 'index.html' in doc.pod_path %}
+{% elif doc.pod_path.startsWith('/amp-dev/about/success-stories/') and not 'index.html' in doc.pod_path %}
 {% set title_prefix = _('Success Story: ') %}
 {% endif %}
 
@@ -115,6 +115,6 @@
 <meta property="og:image:height" content="314">
 
 {# meta tags for amp.dev search filtering #}
-{% set supported_formats = ','.join(doc.formats or doc.collection.formats or ['websites', 'stories', 'ads', 'email']) %}
+{% set supported_formats = (doc.formats or doc.collection.formats or ['websites', 'stories', 'ads', 'email']).join(',') %}
 <meta name="supported-amp-formats" content="{{supported_formats}}">
 <meta name="page-locale" content="{{doc.pod.amp_dev.get_represented_locales(doc)}}">
