--- a/amp-dev/_layouts/views/overview/custom-content.njk
+++ b/amp-dev/_layouts/views/overview/custom-content.njk
@@ -8,6 +8,6 @@
 
 {% block main %}
 <main class="ap--main ap-t-custom-content">
-  {{ doc.html|render|safe }}
+  {{ content|safe }}
 </main>
 {% endblock %}
