--- a/amp-dev/_layouts/views/overview/template-overview.njk
+++ b/amp-dev/_layouts/views/overview/template-overview.njk
@@ -8,6 +8,6 @@
 
 {% block main %}
 <main class="ap--main ap-t-template">
-    {{ doc.html|render|safe }}
+    {{ content|safe }}
 </main>
 {% endblock %}
