--- a/amp-dev/_layouts/views/overview/what-is-amp.njk
+++ b/amp-dev/_layouts/views/overview/what-is-amp.njk
@@ -8,6 +8,6 @@
 
 {% block main %}
 <main class="ap--main ap-t-what-is-amp">
-  {{ doc.html|render|safe }}
+  {{ content|safe }}
 </main>
 {% endblock %}
